[package]
name = "buf-list"
version = "0.1.0"
edition = "2018"
description = "A list of buffers that implements the Bytes::Buf trait"
categories = ["network-programming", "data-structures"]
keywords = ["buffers", "zero-copy", "io"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sunshowers-code/buf-list"
rust-version = "1.39"

[dependencies]
bytes = "1.3.0"

[dev-dependencies]
tokio = { version = "1.0.0", features = ["io-std", "io-util", "macros", "rt"] }
